League auto-awarding custom prizes
- Added ability for constructed leagues to have a custom top X placement / Y game participation prize
- Overhauled constructed league interface so that both preview + creation use the same validation
- Overhauled constructed league admin page section
- Added testing for custom prizes allocation
- Have not yet figured out exactly how to test real-world league ending causing the correct rewards to go out.