@@ -17,6 +17,7 @@ import io.netty.handler.codec.http.cookie.ServerCookieEncoder;
 import io.netty.handler.codec.http.multipart.Attribute;
 import io.netty.handler.codec.http.multipart.HttpPostRequestDecoder;
 import io.netty.handler.codec.http.multipart.InterfaceHttpData;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import java.io.IOException;
@@ -115,15 +116,15 @@ public class LotroServerRequestHandler {
         Player resourceOwner = _playerDao.getPlayer("Librarian");
 
         if (resourceOwner == null)
-            throw new HttpProcessingException(401);
+            throw new HttpProcessingException(401, "Librarian user not found.");
 
         return resourceOwner;
     }
 
     protected String getQueryParameterSafely(QueryStringDecoder queryStringDecoder, String parameterName) {
         List<String> parameterValues = queryStringDecoder.parameters().get(parameterName);
-        if (parameterValues != null && parameterValues.size() > 0)
-            return parameterValues.get(0);
+        if (parameterValues != null && !parameterValues.isEmpty())
+            return parameterValues.getFirst();
         else
             return null;
     }
@@ -179,5 +180,175 @@ public class LotroServerRequestHandler {
 
         String sessionId = _loggedUserHolder.logUser(login);
         return Collections.singletonMap(SET_COOKIE.toString(), ServerCookieEncoder.STRICT.encode("loggedUser", sessionId));
+    }
+
+    /**
+     * This function is for validating incoming parameters on POST requests.  If the passed parameter is empty or null,
+     * then HTTP 400 (Bad Request) will be thrown to inform the user that they need to fix their call.
+     * This should only be used for required fields.  If a string is optional, then of course it should be fine to send
+     * a blank entry.
+     * @param paramName The name of the API parameter being evaluated.  This is purely used to attach a sensible
+     *                  error message to the error.
+     * @param value The value being validated.  Should be a non-empty non-null string.
+     * @throws HttpProcessingException This function throws HTTP 400 (Bad Request) if the value is not a valid string.
+     */
+    protected void Throw400IfStringNull(String paramName, String value) throws HttpProcessingException {
+        if(StringUtils.isEmpty(value)) {
+            throw new HttpProcessingException(400, "Parameter '" + paramName + "' cannot be blank.");
+        }
+    }
+
+    /**
+     * This function is for validating incoming parameters on POST requests.  If the passed parameter is not a
+     * representation of a list of valid strings, then HTTP 400 (Bad Request) will be thrown to inform the user
+     * that they need to fix their call.
+     * This is for a batch of strings, such as those submitted via form data.
+     * This should only be used for required fields.  If a string is optional, then of course it should be fine to send
+     * a blank entry.
+     * @param paramName The name of the API parameter being evaluated.  This is purely used to attach a sensible
+     *                  error message to the error.
+     * @param values The values being validated.  Should be a list of valid non-empty non-null strings.
+     * @throws HttpProcessingException This function throws HTTP 400 (Bad Request) if any value is not a valid string.
+     */
+    protected void Throw400IfAnyStringNull(String paramName, List<String> values) throws HttpProcessingException {
+        for (String value : values) {
+            if(StringUtils.isEmpty(value)) {
+                throw new HttpProcessingException(400, "Parameter '" + paramName + "' cannot be blank.");
+            }
+        }
+    }
+
+    /**
+     * This function is for validating incoming parameters on POST requests.  If the passed parameter is not a
+     * representation of a valid integer, then HTTP 400 (Bad Request) will be thrown to inform the user
+     * that they need to fix their call.
+     * @param paramName The name of the API parameter being evaluated.  This is purely used to attach a sensible
+     *                  error message to the error.
+     * @param value The value being validated.  Should be a valid integer.
+     * @return For convenience, the converted int will be returned, meaning that higher-level functions can
+     *  validate and convert in a single function call.
+     * @throws HttpProcessingException This function throws HTTP 400 (Bad Request) if the value is not a valid integer.
+     */
+    protected int Throw400IfNullOrNonInteger(String paramName, String value) throws HttpProcessingException {
+        if(StringUtils.isEmpty(value)) {
+            throw new HttpProcessingException(400, "Parameter '" + paramName + "' cannot be blank.");
+        }
+        int newValue;
+        try {
+            newValue = Integer.parseInt(value);
+        }
+        catch (NumberFormatException ex) {
+            throw new HttpProcessingException(400, "Parameter '" + paramName + "' must be a valid numeric integer.");
+        }
+
+        return newValue;
+    }
+
+    /**
+     * This function is for validating incoming parameters on POST requests.  If the passed parameter is not a
+     * representation of a valid float, then HTTP 400 (Bad Request) will be thrown to inform the user
+     * that they need to fix their call.
+     * @param paramName The name of the API parameter being evaluated.  This is purely used to attach a sensible
+     *                  error message to the error.
+     * @param value The value being validated.  Should be a valid float.
+     * @return For convenience, the converted float will be returned, meaning that higher-level functions can
+     *  validate and convert in a single function call.
+     * @throws HttpProcessingException This function throws HTTP 400 (Bad Request) if the value is not a valid float.
+     */
+    protected float Throw400IfNullOrNonFloat(String paramName, String value) throws HttpProcessingException {
+        if(StringUtils.isEmpty(value)) {
+            throw new HttpProcessingException(400, "Parameter '" + paramName + "' cannot be blank.");
+        }
+        float newValue;
+        try {
+            newValue = Float.parseFloat(value);
+        }
+        catch (NumberFormatException ex) {
+            throw new HttpProcessingException(400, "Parameter '" + paramName + "' must be a valid numeric float.");
+        }
+
+        return newValue;
+    }
+
+    /**
+     * This function is for validating incoming parameters on POST requests.  If the passed parameter is not a
+     * representation of a list of valid integers, then HTTP 400 (Bad Request) will be thrown to inform the user
+     * that they need to fix their call.
+     * This is for a batch of integers, such as those submitted via form data.
+     * @param paramName The name of the API parameter being evaluated.  This is purely used to attach a sensible
+     *                  error message to the error.
+     * @param values The values being validated.  Should be a list of valid integers.
+     * @return For convenience, the converted ints will be returned, meaning that higher-level functions can
+     *  validate and convert in a single function call.
+     * @throws HttpProcessingException This function throws HTTP 400 (Bad Request) if any value is not a valid integer.
+     */
+    protected List<Integer> Throw400IfAnyNullOrNonInteger(String paramName, List<String> values) throws HttpProcessingException {
+        List<Integer> newValues = new ArrayList<>();
+
+        for(String value : values) {
+            if(StringUtils.isEmpty(value)) {
+                throw new HttpProcessingException(400, "Parameter '" + paramName + "' cannot be blank.");
+            }
+            int newValue;
+            try {
+                newValue = Integer.parseInt(value);
+            }
+            catch (NumberFormatException ex) {
+                throw new HttpProcessingException(400, "Parameter '" + paramName + "' must be a valid numeric integer: '" + value + "'.");
+            }
+            newValues.add(newValue);
+        }
+
+        return newValues;
+    }
+
+    /**
+     * This function is for validating incoming parameters on POST requests.  If the passed parameter is not a
+     * representation of a valid boolean variable, then HTTP 400 (Bad Request) will be thrown to inform the user
+     * that they need to fix their call.
+     * @param paramName The name of the API parameter being evaluated.  This is purely used to attach a sensible
+     *                  error message to the error.
+     * @param value The value being validated.  Should be some representation of "true" or "false".
+     * @return For convenience, the converted boolean will be returned, meaning that higher-level functions can
+     *  validate and convert in a single function call.
+     * @throws HttpProcessingException This function throws HTTP 400 (Bad Request) if the value is not a valid boolean.
+     */
+    protected boolean Throw400IfNullOrNonBoolean(String paramName, String value) throws HttpProcessingException {
+        if(StringUtils.isEmpty(value)) {
+            throw new HttpProcessingException(400, "Parameter '" + paramName + "' cannot be blank.");
+        }
+        boolean newValue;
+        try {
+            newValue = Boolean.parseBoolean(value);
+        }
+        catch (NumberFormatException ex) {
+            throw new HttpProcessingException(400, "Parameter '" + paramName + "' must be a valid boolean value ('true' or 'false').");
+        }
+
+        return newValue;
+    }
+
+    /**
+     * Verifies the request is from a full admin user and nothing less.
+     * @param request the HTTP Request sent from communication.js
+     * @throws HttpProcessingException This function throws HTTP 403 (Forbidden) if the user is not a full admin.
+     */
+    protected void validateAdmin(HttpRequest request) throws HttpProcessingException {
+        Player player = getResourceOwnerSafely(request, null);
+
+        if (!player.hasType(Player.Type.ADMIN))
+            throw new HttpProcessingException(403);
+    }
+
+    /**
+     * Verifies the request is from an admin (or league admin) user.
+     * @param request the HTTP Request sent from communication.js
+     * @throws HttpProcessingException This function throws HTTP 403 (Forbidden) if the user is not a league admin.
+     */
+    protected void validateLeagueAdmin(HttpRequest request) throws HttpProcessingException {
+        Player player = getResourceOwnerSafely(request, null);
+
+        if (!player.hasType(Player.Type.ADMIN) && !player.hasType(Player.Type.LEAGUE_ADMIN))
+            throw new HttpProcessingException(403);
     }
 }
